# tiny-tensor-compiler

./: CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  README.md  genindex.html  index.html  iwyu.imp  objects.inv  search.html  searchindex.js  third-party-programs.txt
docs/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst  requirements.txt
docs/_static/: fix-scrollbar-bug.css
docs/api/: api_gen.py  api_gen_all.sh  builder_capi.rst  builder_capi.yaml  builder_cxxapi.rst  builder_cxxapi.yaml  check_c_symbols.py  check_c_symbols_all.sh  core_capi.rst  core_capi.yaml  core_cxxapi.rst  core_cxxapi.yaml  index.rst  introduction.rst  parser.rst  pregenerate.py
docs/dev/: coopmatrix_layout.rst
docs/manual/: build.rst  builder.rst  calling_convention.rst  core.rst  preprocessor.rst  tensor-ir.rst  tutorial_matrix_chain.rst  usage.rst
examples/: CMakeLists.txt  gemm_common.hpp
examples/benchmark/: CMakeLists.txt  args.cpp  args.hpp  main.cpp
examples/builder/: CMakeLists.txt  main.c  main.cpp
examples/flash_attention/: CMakeLists.txt  README.md  flash_attention.template  main.cpp
examples/jit/: CMakeLists.txt  main.cpp
examples/matrix_chain/: CMakeLists.txt  device_array.hpp  main.cpp  matrix_batch.hpp  test.hpp  test_ader.cpp  test_ader.hpp  test_multi.cpp  test_multi.hpp  test_volume.cpp  test_volume.hpp  util.hpp
examples/simple_cl/: CMakeLists.txt  main.c
examples/simple_ze/: CMakeLists.txt  main.c
examples/tall_and_skinny/: CMakeLists.txt  args.cpp  args.hpp  main.cpp
src/: CMakeLists.txt  attribute.cpp  binary.cpp  binary.hpp  builder.cpp.mochi  codegen_tools.cpp  codegen_tools.hpp  compiler.cpp  compiler_context.cpp  compiler_context.hpp  compiler_context_cache.cpp  compiler_context_cache.hpp  compiler_options.hpp  coopmatrix_info.cpp  coopmatrix_info.hpp  coopmatrix_layout.cpp  coopmatrix_layout.hpp  data_type.cpp  device_info.cpp  device_info.hpp  enums.cpp.mochi  error.cpp  error.hpp  func.cpp  gemm_generator.cpp  gemm_generator.hpp  gemm_tools.cpp  gemm_tools.hpp  half.cpp  inst.cpp  kernel_metadata.hpp  location.cpp  location.hpp  matrix_ext_info.cpp  matrix_ext_info.hpp  number.cpp  number.hpp  number_dispatch.hpp  opencl_cc.cpp  opencl_cc.hpp  (+23 more)
src/analysis/: aa_results.cpp  aa_results.hpp  alias.cpp  alias.hpp  cfg.cpp  cfg.hpp  equal.cpp  equal.hpp  gcd.cpp  gcd.hpp  matrix_ext.cpp  matrix_ext.hpp  memref.cpp  memref.hpp  stack.cpp  stack.hpp
src/cl/: CMakeLists.txt  argument_handler.hpp  device_info.cpp  device_info_helper.hpp  device_info_helper.re  error.cpp  error.hpp  kernel.cpp  recipe_handler.cpp  recipe_handler.hpp  runtime.cpp
src/internal/: compiler_options.cpp
src/ir/: builder.cpp  codegen_tools.cpp  codegen_tools.hpp  data_type.cpp  error.cpp  gemm_generator.cpp  inst.cpp  location.cpp  passes.cpp  precision_helper.cpp  precision_helper.hpp  prog.cpp  scalar_type.cpp  tiling.cpp  value.cpp
src/node/: attr.cpp  attr.hpp  attr_node.cpp  attr_node.hpp  data_type.cpp  data_type.hpp  data_type_node.cpp  data_type_node.hpp  func.cpp  func.hpp  function_node.cpp  function_node.hpp  inst.cpp  inst.hpp  inst_kind.cpp.mochi  inst_node.cpp  inst_node.hpp  inst_view.cpp.mochi  inst_view.hpp.mochi  inst_view_impl.cpp  prog.cpp  prog.hpp  program_node.cpp  program_node.hpp  region.cpp  region.hpp  region_node.cpp  region_node.hpp  type.cpp  type.cpp.mochi  type.hpp  type.hpp.mochi  value.cpp  value.hpp  value_node.cpp  value_node.hpp  visit.hpp.mochi
src/parser/: lexer.hpp  lexer.re  parse_context.cpp  parse_context.hpp  parser_impl.yy
src/pass/: aa_results.cpp  alias_analysis.cpp  alias_analysis.hpp  alignment_propagation.cpp  alignment_propagation.hpp  check_ir.cpp  check_ir.hpp  clone.cpp  clone.hpp  constant_folding.cpp  constant_folding.hpp  constant_folding_helper.hpp  constant_propagation.cpp  constant_propagation.hpp  constant_propagation_helper.hpp  convert_to_opencl.cpp  convert_to_opencl.hpp  convert_to_spirv.cpp  convert_to_spirv.hpp  dead_code_elimination.cpp  dead_code_elimination.hpp  dump_cfg.cpp  dump_cfg.hpp  dump_def_use.cpp  dump_def_use.hpp  dump_gcd.cpp  dump_gcd.hpp  dump_ir.cpp  dump_ir.hpp  dump_matrix_ext.cpp  dump_matrix_ext.hpp  dump_memref_info.cpp  dump_memref_info.hpp  equal.cpp  equal.hpp  insert_barrier.cpp  insert_barrier.hpp  insert_lifetime_stop.cpp  insert_lifetime_stop.hpp  lifetime_analysis.cpp  (+19 more)
src/recipe/: small_gemm_batched.cpp  small_gemm_batched.hpp  tall_and_skinny.cpp  tall_and_skinny.hpp
src/spv/: block2d_diy.cpp  block2d_diy.hpp  capex_util.cpp  capex_util.hpp  converter.cpp  converter.hpp  converter_aux.cpp  converter_aux.hpp  coopmatrix_diy.cpp  coopmatrix_diy.hpp  coopmatrix_impl.cpp  coopmatrix_impl.hpp  coopmatrix_impl_block.cpp  coopmatrix_impl_block.hpp  coopmatrix_impl_dpas.cpp  coopmatrix_impl_dpas.hpp  coopmatrix_layout.hpp  defs.hpp  dope_vector.cpp  dope_vector.hpp  enums.hpp  inst_assembler.cpp  inst_assembler.hpp  instructions.hpp  lut.hpp  matrix_walker.cpp  matrix_walker.hpp  module.cpp  module.hpp  names.cpp  names.hpp  nonsemantic.shader.debuginfo.100.cpp  nonsemantic.shader.debuginfo.100.hpp  opencl.std.cpp  opencl.std.hpp  uniquifier.cpp  uniquifier.hpp  visit.hpp  xe_constants.hpp
src/support/: casting.hpp  fnv1a.hpp  fnv1a_array_view.hpp  fp_util.hpp  ilist.hpp  ilist_base.hpp  temp_counter.cpp  temp_counter.hpp  util.hpp  visit.hpp  walk.cpp  walk.hpp
src/sycl/: CMakeLists.txt  argument_handler.hpp  device_info.cpp  dispatch.hpp  error.cpp  error.hpp  kernel.cpp  recipe_handler.cpp  recipe_handler.hpp  runtime.cpp
src/visitor/: aa_results.cpp  aa_results.hpp  alias_analysis.cpp  alias_analysis.hpp  check_ir.cpp  check_ir.hpp  dump_ir.cpp  dump_ir.hpp  equal.cpp  equal.hpp  insert_barrier.cpp  (+13 more)
test/: CMakeLists.txt  doctest_util.hpp  generator.cpp  lexer.cpp  linalg.hpp  linalg_blas_a2.cpp  linalg_blas_a2.hpp  linalg_blas_a3.cpp  linalg_blas_a3.hpp  linalg_ops.cpp  linalg_ops.hpp  linalg_runner.hpp  linalg_types.cpp  linalg_types.hpp  lit.cfg.py  lit.site.cfg.py.in  main.cpp  math.cpp  runtime_concept.hpp  smm.hpp  tensor3.hpp  visitor.cpp  xmx.hpp
(+446 files in other folders)
